fix: collection drag preview spacing

--- a/app/src/features/apiClient/screens/apiClient/components/sidebar/components/collectionsList/collectionRow/CollectionRow.scss
+++ b/app/src/features/apiClient/screens/apiClient/components/sidebar/components/collectionsList/collectionRow/CollectionRow.scss
@@ -4,6 +4,16 @@
   border-color: transparent;
   box-sizing: border-box;
 
+  // TEMP FIX: Added left padding to colllection name because drag preview of collection looks broken;
+  // TODO: Rever this when drap preview is implemented
+  .ant-collapse-header.ant-collapse-icon-collapsible-only {
+    gap: unset !important;
+
+    .collection-name-container {
+      padding-left: 8px;
+    }
+  }
+
   .loading-collection-row {
     li {
       margin-top: 8px;
